@@ -2,6 +2,6 @@ package util;
 
 public class MathUtil {
     public static int randomBetweenOneAndMax(int max) {
-        return new Double(Math.ceil(Math.random() * max)).intValue();
+        return Double.valueOf(Math.ceil(Math.random() * max)).intValue();
     }
 }
